fix(styles): alignment of checkbox with long labels

--- a/packages/styles/src/components/checkbox.scss
+++ b/packages/styles/src/components/checkbox.scss
@@ -13,6 +13,9 @@ $checkbox-icon-checked: url("data:image/svg+xml,<svg viewBox='0 0 16 16' xmlns='
 $checkbox-icon-indeterminate: url("data:image/svg+xml,<svg width='16' height='16' viewBox='0 0 16 16' xmlns='http://www.w3.org/2000/svg'><path d='M11.21 8.5H4.75C4.34 8.5 4 8.16 4 7.75C4 7.34 4.34 7 4.75 7H11.21C11.62 7 11.96 7.34 11.96 7.75C11.96 8.16 11.62 8.5 11.21 8.5Z'/></svg>");
 
 .form-check {
+  display: flex;
+  align-items: flex-start;
+
   &:has(input[type='checkbox']) {
     margin-bottom: tokens.get('checkbox-gap-block-group');
 
